--- a/Week_1/Day_3/grid-ex1.css
+++ b/Week_1/Day_3/grid-ex1.css
@@ -8,7 +8,7 @@
     background-color: yellow;
 }
 .border {
-    1px solid black;
+    border: 1px solid black;
 }
 .container {
     display: grid;
