--- a/Week_1/Day_3/flex-ex2.css
+++ b/Week_1/Day_3/flex-ex2.css
@@ -4,16 +4,20 @@
     width: 600px;
     height: 400px;
     border: 2px solid red;
-    justify-content: space-between;
+    margin: 5px;
+    padding: 5px;
 }
 .box {
-    height: 70px;
+    height: 150px;
+    flex: 1;
     background-color: dodgerblue;
     color: white;
     border: 1px solid black;
-    align-items: center;
-    margin: 5px;
+
 }
 .item-2 {
-
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 25%;
+    align-self: flex-end;
 }
