Avengers media query added

--- a/Week_1/Day_1/avengers.css
+++ b/Week_1/Day_1/avengers.css
@@ -53,3 +53,14 @@ footer {
   justify-content: center;
   align-items: center;
 }
+@media all and (min-width: 768px) and (max-width: 1024px) {
+  h1, p {
+    color: white;
+  } 
+ }
+
+@media all and (min-width: 480px) and (max-width: 768px) {
+  h1, p {
+    color: pink;
+  }
+ }
