--- a/Week_2_JS/Day_5/calculator/style.css
+++ b/Week_2_JS/Day_5/calculator/style.css
@@ -1,31 +1,44 @@
 * {
     box-sizing: border-box;
 }
-button {
+.btn {
     width:50px;
     height:50px;
 }
-.calculator {
+.row {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(4, 1fr); 
+    width: 250px;
 }
-.numRowOne {
+.calculator {
     display: grid;
-    grid-column: 1/6;
-    grid-row: 1/3;
-    width: 400px;
+    width: 250px;
+    height: 200px;
 }
-.numRowTwo {
-    display: grid;
-    grid-column: 1/6;
-    grid-row: 1/3;
-    width: 400px;
+.reset {
+    background-color: blue;
+    color: white;
+    grid-column: 1/3;
+    width: 100px;
+    height: 50px;
 }
-
-.opRow {
-    display: grid;
-    grid-column: 1/6;
-    width: 400px;
-
+.clear {
+    background-color: red;
+    color: white;
+    grid-column: 3/6;
+    width: 150px;
+    height: 50px;
+}
+#display {
+    width: 250px;
+    height: 50px;
+    border: 1px solid black;   
+}
+.num {
+    color: white;
+    background-color: green;
+}
+.op {
+    color: white;
+    background-color: orange;
 }
