--- a/Week_8_REACT/Day_2/exercises_xp/src/Forms.css
+++ b/Week_8_REACT/Day_2/exercises_xp/src/Forms.css
@@ -1,3 +1,14 @@
-.form {
+.forms {
     text-align: center;
+}
+.welcome {
+    font-size: 70px;
+}
+.formThree {
+    background-color: grey;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50px;
+    height: 300px;
 }
