--- a/Week_8_REACT/Day_2/exercises_xp/src/Forms.css
+++ b/Week_8_REACT/Day_2/exercises_xp/src/Forms.css
@@ -3,10 +3,11 @@
 }
 .welcome {
     font-size: 70px;
+    color: rgb(95, 95, 95);
 }
 .formThree {
-    background-color: grey;
-    width: 50%;
+    background-color: lightgrey;
+    width: 30%;
     margin-left: auto;
     margin-right: auto;
     border-radius: 50px;
