--- a/Week_8_REACT/Day_2/exercises_xp/src/Forms.css
+++ b/Week_8_REACT/Day_2/exercises_xp/src/Forms.css
@@ -6,10 +6,13 @@
     color: rgb(95, 95, 95);
 }
 .formThree {
-    background-color: lightgrey;
-    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
+    background-color: lightgrey;
+    width: 30%;
     border-radius: 50px;
-    height: 300px;
+    height: 400px;
 }
